# HelloWorld

./: .gitignore  CMakeLists.txt  README.md
include/HelloPass/: HelloPass.h
lib/: CMakeLists.txt
lib/HelloPass/: CMakeLists.txt  HelloPass.cpp
stubs/hello/: Cargo.toml
stubs/hello/src/: main.rs
